--- a/5-9_Making-a-Dynamic-Visual-Menu/index.html
+++ b/5-9_Making-a-Dynamic-Visual-Menu/index.html
@@ -7,7 +7,25 @@
     <link rel="stylesheet" href="./styles.css"/>
 </head>
 <body>
-    
+    <span class="buttons"><a href="https://github.com/TelvoWarrior/" id="booksbutton">Books</a></span>
+    <span class="buttons"><a href="https://github.com/TelvoWarrior/" id="moviesbutton">Movies</a></span>
+    <span class="buttons"><a href="https://github.com/TelvoWarrior/" id="musicbutton">Music</a></span>
+    <p class="books">Books of different subjects available at reasonable
+        prices. Ranging from web development, programming languages and text
+        books all are available at heavy discount. Shipping is free. Also
+        available in stock the popular Magazines, E-books and Tutorial CDs
+        at affordable prices.</p>
+    <p class="movies">Find new movie reviews & latest hollywood movie
+        news. Includes new movie trailers, latest hollywood releases, movie
+        showtimes, entertainment news, celebrity interviews etc. Also find
+        Hollywood actress, actor, videos biography, filmography, photos,
+        wallpapers, music, jokes live tv channels at your doorsteps.</p>
+    <p class="music">>Find music videos, internet radio, music downloads
+        and all the latest music news and information. We have a large
+        collection of music and songs classified by type, language and
+        region. All downloads are streamed through RealAudio. You can also
+        watch free music videos, tune in to AOL Radio, and search for your
+        favorite music artists.</p>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="./index.js"></script>
 </body>
