section done, didn't do any changes, a little disappointed with final result

--- a/5-9_Making-a-Dynamic-Visual-Menu/index.html
+++ b/5-9_Making-a-Dynamic-Visual-Menu/index.html
@@ -20,7 +20,7 @@
         showtimes, entertainment news, celebrity interviews etc. Also find
         Hollywood actress, actor, videos biography, filmography, photos,
         wallpapers, music, jokes live tv channels at your doorsteps.</p>
-    <p class="music">>Find music videos, internet radio, music downloads
+    <p class="music">Find music videos, internet radio, music downloads
         and all the latest music news and information. We have a large
         collection of music and songs classified by type, language and
         region. All downloads are streamed through RealAudio. You can also
