--- a/6-3_Showing-Images-One-by-One-by-Clicking-the-Next-and-Previous-buttons/index.html
+++ b/6-3_Showing-Images-One-by-One-by-Clicking-the-Next-and-Previous-buttons/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="./styles.css"/>
 </head>
 <body>
+    <div id="image-slider">
+
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="./index.js"></script>
 </body>
