it became clear to me, most difficult task so far

--- a/6-3_Showing-Images-One-by-One-by-Clicking-the-Next-and-Previous-buttons/index.html
+++ b/6-3_Showing-Images-One-by-One-by-Clicking-the-Next-and-Previous-buttons/index.html
@@ -9,8 +9,17 @@
 </head>
 <body>
     <div id="image-slider">
-
+        <ul>
+            <li><img src="./assets/1.jpg" alt="nature" /></li>
+            <li><img src="./assets/2.jpg" alt="nature" /></li>
+            <li><img src="./assets/3.jpg" alt="nature" /></li>
+            <li><img src="./assets/4.jpg" alt="nature" /></li>
+            <li><img src="./assets/5.jpg" alt="nature" /></li>
+        </ul>
+        
     </div>
+    <img class="left-arrow" src="./assets/left-arrow.png" alt="left arrow icon" />
+    <img class="right-arrow" src="./assets/right-arrow.png" alt="right arrow icon" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="./index.js"></script>
 </body>
